<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="4dp">

    <LinearLayout
        android:id="@+id/item_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_game_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_game_id" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_game_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_game_summary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/item_game_played_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_game_played_on" />

    </LinearLayout>

</androidx.cardview.widget.CardView>